--- a/modules/server/src/main/resources/vm/outgiving/edit.vm
+++ b/modules/server/src/main/resources/vm/outgiving/edit.vm
@@ -19,6 +19,9 @@
 
 <body>
 <div class="layui-container div-project" id="div-project">
+    <blockquote class="layui-elem-quote layui-quote-nm">
+        添加关联分发项目是将已经存在的项目进行关联
+    </blockquote>
     <form action="save" method="post" class="layui-form" lay-filter="form_outgiving">
         <div class="layui-form-item">
             <div class="layui-inline">
