创建分发项目流程OK

--- a/modules/server/src/main/resources/vm/node/manage/editProject.vm
+++ b/modules/server/src/main/resources/vm/node/manage/editProject.vm
@@ -18,14 +18,23 @@
 </head>
 
 <body>
+
+
 <div class="layui-container div-project" id="div-project">
+    #if($item.outGivingProject)
+        <blockquote class="layui-elem-quote layui-quote-nm">
+            节点分发项目请在节点分发管理页面中修改
+        </blockquote>
+    #end
     <form action="saveProject" method="post" class="layui-form" id="form_project" lay-filter="form_project">
         <div class="layui-form-item">
             <div class="layui-inline">
                 <label class="layui-form-label"><span class="x-red">*</span>项目名称</label>
                 <div class="layui-input-block">
-                    <input type="text" name="name" placeholder="项目名称" required lay-verify="required"
-                           class="layui-input" value="#if($item)#if($item.name)$!item.name#else$!item.id#end#end">
+                    <input #if($item.outGivingProject)readonly#end type="text" name="name" placeholder="项目名称" required
+                           lay-verify="required"
+                           class="layui-input"
+                           value="#if($item)#if($item.name)$!item.name#else$!item.id#end#end">
                     <div class="layui-hide">
                         <input type="hidden" name="edit" value="#if($item)on#end">
                     </div>
@@ -35,7 +44,7 @@
             <div class="layui-inline">
                 <label class="layui-form-label">分组名称</label>
                 <div class="layui-input-block">
-                    <select name="group" lay-filter="group">
+                    <select name="group" lay-filter="group" #if($item.outGivingProject)disabled#end>
                         #foreach($i in $groups)
                             <option value="$i" #if($item.group==$i)selected#end>$i</option>
                         #end
@@ -56,7 +65,7 @@
             <div class="layui-inline">
                 <label class="layui-form-label"><span class="x-red">*</span>运行方式</label>
                 <div class="layui-input-block">
-                    <select name="runMode" lay-filter="runMode">
+                    <select name="runMode" lay-filter="runMode" #if($item.outGivingProject)disabled#end>
                         #foreach($itemPath in $runModes)
                             <option value="$itemPath" #if($item.runMode==$itemPath)selected#end>$itemPath</option>
                         #end
@@ -69,7 +78,9 @@
                 <label class="layui-form-label"><span class="x-red">*</span>项目路径</label>
                 <div class="layui-input-block">
 
-                    <select name="whitelistDirectory" required lay-verify="required" lay-filter="projectLib">
+                    <select name="whitelistDirectory"
+                            #if($item.outGivingProject)disabled#end required lay-verify="required"
+                            lay-filter="projectLib">
                         #if(!$itemWhitelistDirectory)
                             <option value="">请选择白名单</option>
                         #end
@@ -91,8 +102,10 @@
             <div class="layui-inline">
                 <label class="layui-form-label" title="$!item.log"><span class="x-red">*</span>项目Jar包</label>
                 <div class="layui-input-block">
-                    <input type="text" name="lib" placeholder="jar存储的文件夹" required lay-verify="required"
-                           class="layui-input" value="#if($item)$!item.lib#end">
+                    <input
+                        #if($item.outGivingProject)readonly#end type="text" name="lib" placeholder="jar存储的文件夹" required
+                        lay-verify="required"
+                        class="layui-input" value="#if($item)$!item.lib#end">
                 </div>
             </div>
             <div class="layui-form-mid layui-word-aux" style="padding: 0 !important;">
@@ -113,7 +126,8 @@
             <div class="layui-inline">
                 <label class="layui-form-label">MainClass</label>
                 <div class="layui-input-block">
-                    <input type="text" name="mainClass" placeholder="程序运行的 main 类(jar模式运行可以不填)" class="layui-input"
+                    <input #if($item.outGivingProject)readonly#end type="text" name="mainClass"
+                           placeholder="程序运行的 main 类(jar模式运行可以不填)" class="layui-input"
                            value="#if($item)$!item.mainClass#end">
                 </div>
             </div>
@@ -122,14 +136,17 @@
             <div class="layui-inline">
                 <label class="layui-form-label">WebHooks</label>
                 <div class="layui-input-block">
-                    <input type="text" name="token" placeholder="关闭程序时自动请求,非必填" class="layui-input"
-                           value="#if($item)$!item.token#end">
+                    <input  #if($item.outGivingProject)readonly#end type="text" name="token" placeholder="关闭程序时自动请求,非必填"
+                            class="layui-input"
+                            value="#if($item)$!item.token#end">
                 </div>
             </div>
             <div class="layui-inline">
                 <label class="layui-form-label">Build标识</label>
                 <div class="layui-input-block">
-                    <input type="text" name="buildTag" placeholder="CodePipeline发布后oss中的文件标识,非必填" class="layui-input"
+                    <input #if($item.outGivingProject)readonly#end type="text" name="buildTag"
+                           placeholder="CodePipeline发布后oss中的文件标识,非必填"
+                           class="layui-input"
                            value="#if($item)$!item.buildTag#end">
                 </div>
             </div>
@@ -138,23 +155,28 @@
             <div class="layui-inline">
                 <label class="layui-form-label">Jvm参数</label>
                 <div class="layui-input-block">
-                    <textarea name="jvm" placeholder="jvm参数,非必填.如：-Xmin=512m -Xmax=512m"
-                              class="layui-textarea">#if($item)$!item.jvm#end</textarea>
+                    <textarea  #if($item.outGivingProject)readonly#end name="jvm"
+                               placeholder="jvm参数,非必填.如：-Xmin=512m -Xmax=512m"
+                               class="layui-textarea">#if($item)$!item.jvm#end</textarea>
                 </div>
             </div>
             <div class="layui-inline">
                 <label class="layui-form-label">args参数</label>
                 <div class="layui-input-block">
-                    <textarea name="args" placeholder="Main函数args参数,非必填.如：--service.port=8080"
+                    <textarea #if($item.outGivingProject)readonly#end name="args"
+                              placeholder="Main函数args参数,非必填.如：--service.port=8080"
                               class="layui-textarea">#if($item)$!item.args#end</textarea>
                 </div>
             </div>
         </div>
         #if(!$item  || $user.isProject($node.id,$!item.id))
             <div class="layui-form-item" style="padding-left: 20%">
-                <button class="layui-btn layui-btn-normal" lay-submit lay-filter="submitProject" id="project_submit">提交
-                </button>
-                #if($item)
+                #if(!$item.outGivingProject)
+                    <button class="layui-btn layui-btn-normal" lay-submit lay-filter="submitProject"
+                            id="project_submit">提交
+                    </button>
+                #end
+                #if($item && !$item.outGivingProject)
                     <a class="layui-btn layui-btn-warm" data-id="$item.id" id="delete_project">删除</a>
                 #end
             </div>
